fixed overflow in register box to scroll

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -302,6 +302,7 @@ body {
     height: 100vh;
     width: 100%;
     max-width: 560px;
+    overflow-y: scroll;
 }
 
 .logo-icon {
